--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="practicing css">
     <title>CSS TUTs with Dave</title>
     <link rel="stylesheet" href="./styles/index_styles.css">
-    <link rel="icon" href="/images/html5.png">
+    <link rel="icon" href="./images/html5.png">
 </head>
 
 <body>
