--- a/lessons/06_lesson_css_text_fonts/index.html
+++ b/lessons/06_lesson_css_text_fonts/index.html
@@ -9,22 +9,27 @@
 </head>
 
 <body>
-    <h1>CSS Units</h1>
+    <header>
+        <h1>CSS Typography</h1>
+    </header>
+
     <main>
-        <article>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                <span>industry's</span>
-                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                to
-                make
-                a type specimen book. It has survived not only five centuries, but also the leap into electronic
-                typesetting,
-                remaining essentially unchanged.
-            </p>
-        </article>
+
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            <span>industry's</span>
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+            to
+            make
+            a type specimen book. It has survived not only five centuries, but also the leap into electronic
+            typesetting,
+            remaining essentially unchanged.
+        </p>
+        <!-- <form>
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" placeholder="your name" />
+            <button>Submit</button>
+        </form> -->
     </main>
-
-
 
 
 </body>
