--- a/lessons/10_lesson_css_display_property_block_inline/index.html
+++ b/lessons/10_lesson_css_display_property_block_inline/index.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css mini project</title>
+    <title>css Display property</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <nav>
-        <h2>CSS Menus</h2>
-        <ul>
-            <li><a href="one.html">Appetizers</a></li>
-            <li><a href="one.html">Entrees</a></li>
-            <li><a href="two.html">Deserts</a></li>
-            <li><a href="two.html">Beverages</a></li>
-            <li><a href="two.html">About</a></li>
-        </ul>
-    </nav>
-    <p>
-        Learn more about <a href="https://www.cnn.com/travel/article/world-best-food-dishes/index.html">Amazing
-            Foods</a>
-    </p>
+    <main>
+        <!-- <p>This is a paragraph</p>
+        <p>This is <span class="opposite">another</span>
+            paragraph.
+        </p> -->
+
+        <nav>
+            <ul>
+                <li><a href="">Intro</a></li>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">projects</a></li>
+            </ul>
+        </nav>
+    </main>
 
 </body>
 
